- correct spacing in schedule section

--- a/sass/pages/upcoming.module.scss
+++ b/sass/pages/upcoming.module.scss
@@ -398,7 +398,7 @@
   @include schedule(7);
   position: relative;
   margin-top: 20rem;
-  margin-bottom: 20rem;
+  margin-bottom: 3.2rem;
 
   &::before {
     content: "";
